# Matlab

./: README.md  sin_cos_fft.m
ADRC/: ADRC.slx  ADRC.slxc  untitled.slx
ADRC/ADRC_ert_rtw/: ADRC.c  ADRC.h  ADRC_private.h  ADRC_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.c  rtwtypes.h  rtwtypeschksum.mat
ADRC/ADRC_ert_rtw/tmwinternal/: simulink_cache.xml  tr
ADRC/slprj/ert/ADRC/tmwinternal/: BlockTraceInfo.mat  CompileInfo.xml  binfo.mat  minfo.mat  scv
ADRC/slprj/ert/_sharedutils/: shared_file.dmr
PLL+PI+simulink/: Untitled.mat  pll.slx  pll.slxc  pll_param.m
PLL+PI+simulink/pll_ert_rtw/: CMakeLists.txt  buildInfo.mat  builtin_typeid_types.h  codeInfo.mat  codedescriptor.dmr  ert_main.c  pll.bat  pll.c  pll.h  pll.rsp  pll_capi.c  pll_capi.h  pll_capi_host.h  pll_private.h  pll_types.h  rt_defines.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
PLL+PI+simulink/pll_ert_rtw/html/data/: data.js  model.js  pages.js
PLL+PI+simulink/pll_ert_rtw/html/pages/: pll_coderassumptions.html  pll_interface.html  pll_replacements.html  pll_subsystems.html  pll_survey.html  pll_trace.html
PLL+PI+simulink/pll_ert_rtw/tmwinternal/: simulink_cache.xml  tr
PLL+PI+simulink/slcov_output/pll/: pll_cvdata.cvt  pll_cvdata_1.cvt  pll_cvdata_2.cvt  pll_cvdata_3.cvt  pll_cvdata_4.cvt  pll_cvdata_5.cvt  pll_cvdata_6.cvt
PLL+PI+simulink/slcov_output/pll/CoverageDetails/: docked__cov__report__pll__Normal.html
PLL+PI+simulink/slprj/ert/_sharedutils/: shared_file.dmr
PLL+PI+simulink/slprj/ert/pll/tmwinternal/: BlockTraceInfo.mat  CompileInfo.xml  capi.mat  minfo.mat  scv
PLL+PI+simulink/slprj/sim/varcache/pll/: checksumOfCache.mat  varInfo.mat
PLL+PI+simulink/slprj/sim/varcache/pll/tmwinternal/: simulink_cache.xml
电机回路的仿真分析/电流环的仿真/: current_control.slx  current_control.slx.autosave  current_control.slx.original  current_control.slxc  current_control_original.slx  current_control_param.m  mass_interacts_with_enviroments_para.asv  mass_interacts_with_enviroments_para.m  mass_interacts_with_enviromment.slx  mass_interacts_with_enviromment.slxc  multiVarFunction.m  second_order_linear_system.m  second_order_linear_system_param.m  sencond_order_linear_system.slx  sencond_order_linear_system.slx.autosave  sencond_order_linear_system.slxc  untitled.slx.autosave
电机回路的仿真分析/电流环的仿真/slprj/sim/varcache/current_control/: checksumOfCache.mat  varInfo.mat
电机回路的仿真分析/电流环的仿真/slprj/sim/varcache/current_control/tmwinternal/: simulink_cache.xml
电机回路的仿真分析/电流环的仿真/slprj/sim/varcache/mass_interacts_with_enviromment/: checksumOfCache.mat  varInfo.mat
电机回路的仿真分析/电流环的仿真/slprj/sim/varcache/mass_interacts_with_enviromment/tmwinternal/: simulink_cache.xml
电机回路的仿真分析/电流环的仿真/slprj/sim/varcache/sencond_order_linear_system/: checksumOfCache.mat  varInfo.mat
电机回路的仿真分析/电流环的仿真/slprj/sim/varcache/sencond_order_linear_system/tmwinternal/: simulink_cache.xml
自动控制原理学习/线性系统的状态空间/根轨迹设计/: rlocus_5_1.m
自动控制原理学习/频域响应设计/: lead_phase_for_motor_system.slx  phase_lead_compensation.asv  phase_lead_compensation.m  second_order_damped_system.m
谐振频率仿真/: mechanical_vibration_system.m  untitled1.slx.autosave
谐振频率仿真/slprj/sim/varcache/mechanical_vibration_system/: checksumOfCache.mat  varInfo.mat
谐振频率仿真/slprj/sim/varcache/mechanical_vibration_system/tmwinternal/: simulink_cache.xml
